feat: web api completed.

--- a/src/Web/BlazorWebAssemblyIndentityDemo.WebApi/appsettings.json
+++ b/src/Web/BlazorWebAssemblyIndentityDemo.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ERANDIKA;Database=BlazorWADemo; TrustServerCertificate=True;User Id=sa1;Password=1qaz2wsx@;"
+  },
   "AllowedHosts": "*"
 }
