--- a/src/Auth/BlazorWebAssemblyIdentityDemo.ManageUserApi/BlazorWebAssemblyIdentityDemo.ManageUserApi.csproj
+++ b/src/Auth/BlazorWebAssemblyIdentityDemo.ManageUserApi/BlazorWebAssemblyIdentityDemo.ManageUserApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel.AspNetCore.OAuth2Introspection" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
@@ -25,6 +26,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\BlazorWebAssemblyIndentityDemo.Shared\BlazorWebAssemblyIdentityDemo.Shared.csproj" />
     <ProjectReference Include="..\BlazorWebAssemblyIdentityDemo.Data\BlazorWebAssemblyIdentityDemo.OAuth.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Dynami.IdentityServer4.AccessTokenValidation">
+      <HintPath>..\Libs\Dynami.IdentityServer4.AccessTokenValidation.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
