--- a/src/Auth/BlazorWebAssemblyIdentityDemo.Data/BlazorWebAssemblyIdentityDemo.OAuth.Data.csproj
+++ b/src/Auth/BlazorWebAssemblyIdentityDemo.Data/BlazorWebAssemblyIdentityDemo.OAuth.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
