--- a/src/Auth/BlazorWebAssemblyIndentityDemo.OAuth/BlazorWebAssemblyIdentityDemo.OAuth.csproj
+++ b/src/Auth/BlazorWebAssemblyIndentityDemo.OAuth/BlazorWebAssemblyIdentityDemo.OAuth.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\BlazorWebAssemblyIdentityDemo.Data\BlazorWebAssemblyIdentityDemo.OAuth.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
