--- a/src/Web/BlazorWebAssemblyIndentityDemo.ClientApp/BlazorWebAssemblyIndentityDemo.ClientApp.csproj
+++ b/src/Web/BlazorWebAssemblyIndentityDemo.ClientApp/BlazorWebAssemblyIndentityDemo.ClientApp.csproj
@@ -10,7 +10,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\BlazorWebAssemblyIndentityDemo.Shared\BlazorWebAssemblyIdentityDemo.Shared.csproj" />
   </ItemGroup>
 
 </Project>
