--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/BlazorWebAssemblyIdentityDemo.ClientApp.csproj
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/BlazorWebAssemblyIdentityDemo.ClientApp.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="7.0.8" />
+    <PackageReference Include="Radzen.Blazor" Version="4.14.1" />
   </ItemGroup>
 
   <ItemGroup>
