feat: ProductCategoryService service implemented.

--- a/src/Product/Web/BlazorWebAssemblyIdentityDemo.Product.WebApi/BlazorWebAssemblyIdentityDemo.Product.WebApi.csproj
+++ b/src/Product/Web/BlazorWebAssemblyIdentityDemo.Product.WebApi/BlazorWebAssemblyIdentityDemo.Product.WebApi.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\..\Infrastructure\BlazorWebAssemblyIdentityDemo.Product.Infrastructure\BlazorWebAssemblyIdentityDemo.Product.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
