--- a/src/Product/Core/BlazorWebAssemblyIdentityDemo.Product.Application/BlazorWebAssemblyIdentityDemo.Product.Application.csproj
+++ b/src/Product/Core/BlazorWebAssemblyIdentityDemo.Product.Application/BlazorWebAssemblyIdentityDemo.Product.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.Extensions.Features" Version="7.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
